// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className=""
>
  <WithStyles(WithFormControlContext(ForwardRef(FormControlLabel)))
    control={
      <ForwardRef(WithStyles)
        checked={false}
        color="primary"
        onChange={[Function]}
        value="switch"
      />
    }
    disabled={false}
    label="Title"
  />
</div>
`;

exports[`renders disabled 1`] = `
<div
  className=""
>
  <WithStyles(WithFormControlContext(ForwardRef(FormControlLabel)))
    control={
      <ForwardRef(WithStyles)
        checked={false}
        color="primary"
        onChange={[Function]}
        value="switch"
      />
    }
    disabled={true}
    label="Title"
  />
</div>
`;

exports[`renders with helper text 1`] = `
<div
  className=""
>
  <WithStyles(WithFormControlContext(ForwardRef(FormControlLabel)))
    control={
      <ForwardRef(WithStyles)
        checked={false}
        color="primary"
        onChange={[Function]}
        value="switch"
      />
    }
    disabled={false}
    label="Title"
  />
  <WithStyles(WithFormControlContext(ForwardRef(FormHelperText)))
    disabled={false}
  >
    test
  </WithStyles(WithFormControlContext(ForwardRef(FormHelperText)))>
</div>
`;
